[package]
name = "learn-cargo"
version = "0.1.0"
edition = "2024"

[features]
# 根据平台自动启用对应的features
default = ["windows-log", "linux-tracing"]
windows-log = ["dep:log", "dep:env_logger"]
linux-tracing = ["dep:tracing", "dep:tracing-subscriber"]

[dependencies]
# Windows平台的依赖
[target.'cfg(windows)'.dependencies]
log = { version = "0.4", optional = true }
env_logger = { version = "0.10", optional = true }

# Linux平台的依赖  
[target.'cfg(target_os = "linux")'.dependencies]
tracing = { version = "0.1", optional = true }
tracing-subscriber = { version = "0.3", optional = true }
